random mouche + correction z-index

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@ body {
   max-width: 100vw;
 }
 
+img {
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
 
 hr {
   border-width: 0px;
@@ -741,13 +749,13 @@ img.superpose2 {
 }
 
 #CAMcorps {
-   z-index: 11;
+   z-index: 14;
 }
 #CAMpupille {
-   z-index: 12;
+   z-index: 14;
 }
 #CAMmachoire {
-   z-index: 14;
+   z-index: 11;
    transform-origin: 17.5% 25%;
 }
 
@@ -758,6 +766,7 @@ img.superpose2 {
   height: 6%;
   z-index: 13;
   transform-origin: 0 50%;
+  border-radius: 50% 0px 0px 50%;
 }
 
 #CAMlangue {
@@ -766,14 +775,6 @@ img.superpose2 {
   clear:right;
 }
 
-.mouche {
-  user-drag: none;
-user-select: none;
--moz-user-select: none;
--webkit-user-drag: none;
--webkit-user-select: none;
--ms-user-select: none;
-}
 
 .eatMouth {
   animation: mouthAnim 0.5s ease;
@@ -797,41 +798,59 @@ user-select: none;
   }
 }
 
-#mouche1 {
+.mouche {
   height: 100%;
-  animation: fly 4s ease-in-out infinite, fly-rotate 4s ease-in-out infinite;
+  position: absolute;
 }
 
-#mouche1B {
+.moucheB {
   height: 10%;
-  animation: move1 25s ease-out infinite;
-  z-index: 15;
-  position: relative;
+  position: absolute;
+  z-index: 16;
 }
 
-#mouche2 {
-  height: 100%;
+.mouche11 {
+  animation: fly 4s ease-in-out infinite, fly-rotate1 4s ease-in-out infinite;
+}
+.mouche11B{
+  animation: move11 17s ease-out forwards;
+}
+
+.mouche12 {
+  animation: fly 4s ease-in-out infinite, fly-rotate1 4s ease-in-out infinite;
+}
+.mouche12B{
+  animation: move12 21s ease-out forwards;
+}
+
+.mouche13 {
+  animation: fly 4s ease-in-out infinite, fly-rotate1 4s ease-in-out infinite;
+}
+.mouche13B{
+  animation: move13 27s ease-out forwards;
+}
+
+.mouche21 {
   animation: fly 4s ease-in-out infinite, fly-rotate2 4s ease-in-out infinite;
 }
-
-#mouche2B {
-  height: 10%;
-  animation: move2 18s ease-in infinite;
-  z-index: 15;
-  position: relative;
+.mouche21B{
+  animation: move21 19s ease-out forwards;
 }
 
-#mouche3 {
-  height: 100%;
-  animation: fly 4s ease-in-out infinite, fly-rotate 4s ease-in-out infinite;
+.mouche22 {
+  animation: fly 4s ease-in-out infinite, fly-rotate2 4s ease-in-out infinite;
+}
+.mouche22B{
+  animation: move22 22s ease-out forwards;
 }
 
-#mouche3B {
-  height: 10%;
-  animation: move3 20s ease-out infinite;
-  z-index: 15;
-  position: relative;
+.mouche23 {
+  animation: fly 4s ease-in-out infinite, fly-rotate2 4s ease-in-out infinite;
 }
+.mouche23B{
+  animation: move23 25s ease-out forwards;
+}
+
 
 .hideMouche {
   display: none;
@@ -850,7 +869,7 @@ user-select: none;
 	}
 }
 
-@keyframes fly-rotate {
+@keyframes fly-rotate1 {
 	0% {
          transform:rotate(0deg);
 	}
@@ -880,30 +899,57 @@ user-select: none;
 	}
 }
 
-@keyframes move1 {
+@keyframes move11 {
 	0% {
-    transform: translate(-10vw) translateY(30vh);
+    transform: translate(-10vw) translateY(25vh);
 	}
     100% {
-		 transform: translate(110vw) translateY(30vh);
+		 transform: translate(110vw) translateY(25vh);
 	}
 }
 
-@keyframes move2 {
+@keyframes move12 {
 	0% {
-    transform: translate(100vw) translateY(5vh);
+    transform: translate(-10vw) translateY(40vh);
 	}
     100% {
-		 transform: translate(-10vw) translateY(5vh);
+		 transform: translate(110vw) translateY(35vh);
 	}
 }
 
-@keyframes move3 {
+@keyframes move13 {
 	0% {
-    transform: translate(-20vw) translateY(60vh);
+    transform: translate(-20vw) translateY(80vh);
 	}
     100% {
 		 transform: translate(110vw) translateY(55vh);
+	}
+}
+
+@keyframes move21 {
+	0% {
+    transform: translate(100vw) translateY(15vh);
+	}
+    100% {
+		 transform: translate(-10vw) translateY(15vh);
+	}
+}
+
+@keyframes move22 {
+	0% {
+    transform: translate(100vw) translateY(45vh);
+	}
+    100% {
+		 transform: translate(-10vw) translateY(45vh);
+	}
+}
+
+@keyframes move23 {
+	0% {
+    transform: translate(100vw) translateY(70vh);
+	}
+    100% {
+		 transform: translate(-10vw) translateY(80vh);
 	}
 }
 
